--- a/app/src/main/res/layout/books_fragment.xml
+++ b/app/src/main/res/layout/books_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.books.BooksFragment">
+    tools:context=".ui.random.BooksFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
