--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.speakers.SlideshowFragment">
+    tools:context=".ui.diseases.SlideshowFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
