--- a/app/src/main/res/layout/item_tips_list.xml
+++ b/app/src/main/res/layout/item_tips_list.xml
@@ -1,92 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    app:cardCornerRadius="16dp"
+    app:cardElevation="4dp"
+    app:cardUseCompatPadding="true"
+    app:contentPadding="16dp"
+    android:layout_margin="18dp"
+    android:layout_height="match_parent">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="4dp"
-        app:cardUseCompatPadding="true"
-        app:contentPadding="16dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/quote_item_layout"
+
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/tip_item_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:orientation="vertical"
+            android:layout_height="match_parent">
 
 
             <TextView
-                android:id="@+id/item_quote_text"
+                android:id="@+id/item_tip_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:text="You know evil girls got the prettiest face"
+                android:layout_margin="8dp"
+                android:padding="10dp"
                 android:textAlignment="center"
-                android:textAppearance="@style/CourseTitle"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_gravity="center"
+                android:text=""
+                android:textAppearance="@style/CourseTitle" />
 
-            <ImageView
-                android:id="@+id/quote_image_like"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:orientation="horizontal"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/item_quote_text"
-                app:layout_constraintTop_toBottomOf="@+id/item_quote_text_author"
-                app:srcCompat="@drawable/ic_baseline_favorite_filled"
-                app:tint="@color/purple_700" />
+                android:layout_gravity="bottom|start"
+
+                >
+
+                <ImageView
+                    android:id="@+id/tip_image_like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_baseline_favorite_filled"
+                    app:tint="@color/purple_700" />
+
+                <TextView
+                    android:id="@+id/item_tips_text_like_numbers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="2dp"
+                    android:text=""
+                    android:textAppearance="@style/CourseTitle"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/quote_image_like"
+                    app:layout_constraintStart_toEndOf="@+id/quote_image_like"
+                    app:layout_constraintTop_toTopOf="@+id/quote_image_like" />
+
+            </LinearLayout>
+
+
+
 
             <ImageView
-                android:id="@+id/quote_image_share"
+                android:id="@+id/tip_image_share"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:layout_gravity="bottom|end"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/item_quote_text"
+                app:layout_constraintEnd_toEndOf="@+id/item_tip_text"
                 app:layout_constraintTop_toBottomOf="@+id/item_quote_text_author"
                 app:srcCompat="@drawable/share"
                 app:tint="@color/purple_700" />
 
-            <TextView
-                android:id="@+id/item_quote_text_like_numbers"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="2dp"
-                android:text=""
-                android:textAppearance="@style/CourseTitle"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="@+id/quote_image_like"
-                app:layout_constraintStart_toEndOf="@+id/quote_image_like"
-                app:layout_constraintTop_toTopOf="@+id/quote_image_like" />
-
-            <TextView
-                android:id="@+id/item_quote_text_author"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="~Juice World &amp; xxx tension &amp; pop smoke ~"
-                android:textAppearance="@style/CourseTitle"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="@+id/item_quote_text"
-                app:layout_constraintStart_toStartOf="@+id/item_quote_text"
-                app:layout_constraintTop_toBottomOf="@+id/item_quote_text" />
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-    </androidx.cardview.widget.CardView>
-</FrameLayout>
+</androidx.cardview.widget.CardView>
