--- a/app/src/main/res/layout/activity_admin_tips_full_info.xml
+++ b/app/src/main/res/layout/activity_admin_tips_full_info.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:padding="8dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -27,10 +28,9 @@
                 android:id="@+id/tip_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="Health Tip"
                  />
         </com.google.android.material.textfield.TextInputLayout>
-
-
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout5"
@@ -38,26 +38,29 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:padding="8dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/textInputLayout"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/fullInfo"
+                android:hint="Health Tip Info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                />
         </com.google.android.material.textfield.TextInputLayout>
 
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/update_health_tip_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Update Health Tip"
             android:textAllCaps="false"
-            android:padding="10dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:layout_margin="16dp"
             android:background="@drawable/text_background"
             app:layout_constraintBottom_toBottomOf="parent"
