--- a/app/src/main/res/layout/activity_quote_info.xml
+++ b/app/src/main/res/layout/activity_quote_info.xml
@@ -12,12 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="12dp"
-        android:background="@drawable/rounded_text"
-        android:padding="10dp"
         android:textAlignment="center"
-        android:text=""
+        android:text="I hate stress , you love stress , we  all love and hate stress"
         android:textAppearance="@style/CourseTitle"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,12 +28,11 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
-        android:text=""
+        android:text="Take Water Every Morning"
         android:textAlignment="center"
         android:textAppearance="@style/CourseTitle"
-        android:background="@drawable/rounded_text"
         android:padding="10dp"
-        android:textSize="16sp"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -75,7 +71,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/ic_baseline_favorite_border_24"
+            app:srcCompat="@drawable/ic_baseline_favorite_filled"
             app:tint="@color/purple_700" />
 
         <TextView
@@ -126,7 +122,6 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="16dp"
         android:text="Comments"
-        android:background="@drawable/rounded_text"
         android:padding="10dp"
         android:textAlignment="textStart"
         android:textAppearance="@style/CourseTitle"
@@ -134,19 +129,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tip_info_image_like" />
 
-    <TextView
-        android:id="@+id/tip_recycler_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/rounded_text"
-        android:padding="10dp"
-        android:text="0"
-        android:textAppearance="@style/CourseTitle"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView4" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tip_review_recyclerview"
@@ -155,7 +137,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/comments_review_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -170,19 +152,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:visibility="gone"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent">
 
         <EditText
             android:id="@+id/tip_review_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
             android:textColor="@color/purple_700"
             android:layout_marginBottom="8dp"
             android:padding="10dp"
-            android:background="@drawable/rounded_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/tip_review_button"
             app:layout_constraintStart_toStartOf="parent"
@@ -192,10 +174,6 @@
             android:id="@+id/tip_review_button"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/rounded_text"
             android:padding="8dp"
             android:src="@drawable/ic_baseline_send_24"
             app:layout_constraintBottom_toBottomOf="@+id/tip_review_text"
