--- a/app/src/main/res/layout/fragment_about_developer.xml
+++ b/app/src/main/res/layout/fragment_about_developer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,104 +11,159 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="90dp"
         android:layout_marginStart="18dp"
         android:layout_marginEnd="18dp"
         android:layout_gravity="center"
         android:orientation="vertical"
         >
 
-<!--
-
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="150dp"
-            android:weightSum="3"
+            android:textAlignment="center"
+            android:textColor="?android:textColorPrimary"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:text="Community Project By GADS"
+            />
+
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="?android:textColorPrimary"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:layout_marginTop="16dp"
+            android:text="Project Code Repository "
+
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textIsSelectable="true"
+            android:textColor="?android:textColorPrimary"
+            android:textStyle="bold"
+            android:layout_marginTop="5dp"
+            android:text="https://github.com/itzalpha/GADS-Community-Project-Team-8"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="?android:textColorPrimary"
+            android:textStyle="bold"
+            android:textSize="16sp"
             android:layout_marginTop="10dp"
-            android:orientation="horizontal"
-            android:baselineAligned="false">
+            android:text="Team Participants"
 
-            <LinearLayout
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="1"
-                tools:ignore="UseCompoundDrawables">
-                <ImageView
-                    android:id="@+id/twitterCeo"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/twitter"
-                    android:layout_gravity="center"
-                    tools:ignore="ContentDescription" />
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="@style/CourseTitle"    android:text="twitter"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    />
+            />
 
-            </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Ahmed Mukhtar Muhammed  \n Android Mobile Developer \n Team Lead"
+            android:textColor="?android:textColorPrimary"
+            android:textStyle="bold"
 
-            <LinearLayout
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="1"
-                tools:ignore="UseCompoundDrawables">
+            />
 
-                <ImageView
-                    android:id="@+id/instagramCeo"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/instagram"
-                    android:layout_gravity="center"
-                    tools:ignore="ContentDescription" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="@style/CourseTitle"  android:text="instagram"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textIsSelectable="true"
+            android:textColor="?android:textColorPrimary"
+            android:text="https://www.linkedin.com/in/ahmed-mukhtar-7245851b5"
+            />
 
 
-            </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text=" Alpha Omondi  \n Android Mobile Developer \n participant"
+            android:textColor="?android:textColorPrimary"
+            android:textStyle="bold"
 
-            <LinearLayout
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="1"
-                tools:ignore="UseCompoundDrawables">
+            />
 
-                <ImageView
-                    android:id="@+id/linkedInCeo"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/linkedln"
-                    android:layout_gravity="center"
-                    tools:ignore="ContentDescription"
-                     />
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="@style/CourseTitle"   android:text="linkedIn"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textIsSelectable="true"
+            android:textColor="?android:textColorPrimary"
+            android:text="https://github.com/AlpherOmondi"
+            />
 
 
 
-            </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textColor="?android:textColorPrimary"
+            android:textStyle="bold"
+            android:text=" Nurudeen Yusuf  \n Google Cloud Platform  \n participant"
 
-        </LinearLayout>
--->
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textIsSelectable="true"
+            android:textColor="?android:textColorPrimary"
+            android:text="https://www.linkedin.com/in/nurudeen-yusuf-0677a916"
+            />
+
+
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text=" Hatem baraka  \n Google Cloud Platform \n participant"
+            android:textColor="?android:textColorPrimary"
+            android:textStyle="bold"
+
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textIsSelectable="true"
+            android:textColor="?android:textColorPrimary"
+            android:text="https://www.linkedin.com/in/hatembaraka"
+            />
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textColor="?android:textColorPrimary"
+            android:textStyle="bold"
+            android:text=" David Ochieng, Kenyan  \n Google Cloud Platform &amp; Android \n participant"
+
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textIsSelectable="true"
+            android:layout_marginBottom="30dp"
+            android:textColor="?android:textColorPrimary"
+            android:text="https://github.com/Ochieng"
+            />
+
+
+
+
     </LinearLayout>
 
 
-</FrameLayout>
+</ScrollView>
