--- a/app/src/main/res/layout/activity_quote_info.xml
+++ b/app/src/main/res/layout/activity_quote_info.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
         android:textAlignment="center"
-        android:text="I hate stress , you love stress , we  all love and hate stress"
+        android:text=""
         android:textAppearance="@style/CourseTitle"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
-        android:text="Take Water Every Morning"
+        android:text=""
         android:textAlignment="center"
         android:textAppearance="@style/CourseTitle"
         android:padding="10dp"
